--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sathyadarshana | The Light of Truth</title>
+  <title>Sathyadarshana | Wisdom for Humanity</title>
   <style>
     * {
       margin: 0;
@@ -117,11 +117,11 @@
 <body>
 
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html">🏠 Home</a>
     <a href="library.html">📚 Library</a>
     <a href="astrology.html">🔭 Astrology</a>
     <a href="ai-buddhi.html">🧠 AI Buddhi</a>
-    <a href="music-lab.html">🎵 Music Lab</a>
+    <a href="music-lab.html">🎵 Sathyadarshana Music Lab</a>
     <a href="news.html">📰 News</a>
     <a href="about.html">🌟 About</a>
     <a href="contact.html">✉️ Contact</a>
@@ -151,9 +151,9 @@
   </section>
 
   <section>
-    <h2>🎼 Smule Music Lab</h2>
-    <p>Sing, listen, and feel — where your voice becomes a prayer. Featuring sacred songs & Sathyadarshana Studio.</p>
-    <img src="assets/music.jpg" alt="Music Preview" />
+    <h2 class="glow">🎼 Sathyadarshana Music Lab</h2>
+    <p>Sing, listen, and feel — where your voice becomes a prayer. Explore sacred songs, AI-enhanced recordings, and our humble Sathyadarshana Studio.</p>
+    <img src="assets/music.jpg" alt="Music Lab Preview" />
   </section>
 
   <section>
