--- a/index.html
+++ b/index.html
@@ -1,182 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sathyadarshana | The Light of Truth</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sathyadarshana | Light of Truth</title>
+  <meta name="description" content="Sathyadarshana - The Light of Truth. AI-powered spirituality, astrology tools, digital library, and more.">
+  <link rel="icon" href="/assets/favicon.png">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html, body {
-      font-family: 'Segoe UI', sans-serif;
+    body {
+      margin: 0; font-family: 'Segoe UI',sans-serif;
       background: radial-gradient(circle at 20% 20%, #0f172a, #000);
+      color: #e0f2fe; min-height: 100vh;
+      text-align: center;
+    }
+    header { padding: 2rem 0 1rem 0; }
+    header h1 { color: #7dd3fc; font-size: 2.2em; letter-spacing:2px; margin-bottom: 0.2em; }
+    header p { color: #bae6fd; font-size:1.09em; }
+    .main-grid {
+      display: grid; grid-template-columns: repeat(auto-fit,minmax(230px,1fr));
+      gap: 1.3rem; max-width: 1100px; margin: 2.5rem auto 2rem auto; padding: 0 1rem;
+    }
+    .main-card {
+      background: rgba(30,41,59,0.93);
+      border-radius: 1em;
+      box-shadow: 0 0 18px #38bdf833;
+      padding: 1.5em 1em;
+      text-align: center;
+      transition: transform 0.21s, box-shadow 0.21s;
       color: #e0f2fe;
-      scroll-behavior: smooth;
-    }
-
-    nav {
-      display: flex;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      background: rgba(2, 6, 23, 0.8);
-      padding: 1rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border-bottom: 1px solid #1e293b;
-    }
-
-    nav a {
-      color: #38bdf8;
       text-decoration: none;
-      padding: 0.5rem 1rem;
-      border: 1px solid #38bdf8;
-      margin-right: 0.75rem;
-      border-radius: 999px;
-      transition: all 0.3s ease;
-      white-space: nowrap;
-      box-shadow: 0 0 6px #38bdf880;
+      display: flex; flex-direction: column; align-items: center;
+      min-height: 180px;
+      border: 2px solid transparent;
     }
-
-    nav a:hover {
-      background: #38bdf8;
-      color: #0f172a;
-      box-shadow: 0 0 15px #38bdf8;
+    .main-card:hover {
+      transform: translateY(-9px) scale(1.04);
+      box-shadow: 0 7px 28px #38bdf888;
+      border: 2px solid #38bdf8;
+      color: #fff;
+      background: rgba(2,6,23,0.95);
     }
-
-    header {
-      text-align: center;
-      padding: 4rem 1rem 2rem;
+    .main-card .emoji { font-size:2em; margin-bottom:0.5em; }
+    .main-card h2 { color: #38bdf8; font-size: 1.2em; margin-bottom: 0.3em; }
+    .main-card ul { margin: 0.7em 0 0 0; padding: 0; list-style: none; color:#bae6fd; font-size:0.98em;}
+    .main-card ul li {margin:0.16em 0;}
+    @media (max-width: 700px) {
+      .main-grid { grid-template-columns: 1fr; gap: 0.9rem; }
+      .main-card { padding: 1em 0.6em; min-height: 135px;}
+      header { padding: 1.1rem 0 0.7rem 0;}
     }
-
-    header h1 {
-      font-size: 2.7rem;
-      color: #7dd3fc;
-      text-shadow: 0 0 10px #0ea5e9;
-      animation: glow 2s ease-in-out infinite alternate;
-    }
-
-    header p {
-      margin-top: 1rem;
-      font-size: 1.1rem;
-      color: #cbd5e1;
-    }
-
-    section {
-      padding: 4rem 1rem;
-      text-align: center;
-      border-bottom: 1px solid #1e293b;
-    }
-
-    section img {
-      max-width: 100%;
-      border-radius: 1rem;
-      margin: 1rem auto;
-      box-shadow: 0 0 20px #1e40af77;
-    }
-
-    section h2 {
-      font-size: 1.8rem;
-      color: #38bdf8;
-      margin-bottom: 0.5rem;
-    }
-
-    section p {
-      max-width: 800px;
-      margin: 0 auto;
-      font-size: 1rem;
-      color: #94a3b8;
-    }
-
     footer {
-      background: #0f172a;
-      padding: 2rem 1rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #64748b;
-      border-top: 1px solid #1e293b;
-    }
-
-    @keyframes glow {
-      from {
-        text-shadow: 0 0 5px #38bdf8, 0 0 10px #38bdf8;
-      }
-      to {
-        text-shadow: 0 0 20px #38bdf8, 0 0 40px #0ea5e9;
-      }
+      margin-top:2.5rem; 
+      color:#7dd3fc; 
+      font-size:0.98rem;
+      padding: 1rem;
+      border-top: 1px solid #38bdf8;
     }
   </style>
 </head>
 <body>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="library.html">📚 Library</a>
-    <a href="astrology.html">🔭 Astrology</a>
-    <a href="ai-buddhi.html">🧠 AI Buddhi</a>
-    <a href="music-lab.html">🎵 Music Lab</a>
-    <a href="news.html">📰 News</a>
-    <a href="about.html">🌟 About</a>
-    <a href="contact.html">✉️ Contact</a>
-  </nav>
-
   <header>
     <h1>Sathyadarshana</h1>
-    <p>🌌 Touch the Light. Walk the Path. Awaken the Truth.</p>
+    <p>The Light of Truth – Explore, Learn, and Grow Spiritually</p>
   </header>
 
   <section>
-    <h2>📖 Explore the Sacred Library</h2>
-    <p>Read timeless scriptures from Buddhism, Christianity, Islam, Hinduism & beyond — with multilingual & voice support.</p>
-    <img src="assets/library.jpg" alt="Library Preview" />
-  </section>
-
-  <section>
-    <h2>🌠 Vedic Astrology & KP Tools</h2>
-    <p>Experience accurate planetary insights using NASA data, KP sub-lord methods, and your birth details.</p>
-    <img src="assets/astrology.jpg" alt="Astrology Preview" />
-  </section>
-
-  <section>
-    <h2>🧬 Buddhi AI Assistant</h2>
-    <p>Ask spiritual questions, get instant answers, and navigate the site with wisdom — in Sinhala, Tamil, or English.</p>
-    <img src="assets/ai.jpg" alt="AI Buddhi Preview" />
-  </section>
-
-  <section>
-    <h2>🎼 Sathyadarshana Music Lab</h2>
-    <p>Sing, listen, and feel — where your voice becomes a prayer. Featuring sacred songs & Studio recordings.</p>
-    <img src="assets/music.jpg" alt="Music Preview" />
-  </section>
-
-  <section>
-    <h2>🕊️ Global Newsline</h2>
-    <p>Daily updates that focus on peace, humanity, and truth. Each story ends with a prayer to calm the world.</p>
-    <img src="assets/news.jpg" alt="News Preview" />
-  </section>
-
-  <section>
-    <h2>🧘‍♂️ About Us</h2>
-    <p>Sathyadarshana is a humble offering by Anuruddha & Buddhi — blending light, compassion, and digital wisdom for all beings.</p>
-    <img src="assets/about.jpg" alt="About Preview" />
-  </section>
-
-  <section>
-    <h2>📬 Contact & Connect</h2>
-    <p>Send feedback, join our mission, or just say hello. Your message will be received with love and sincerity.</p>
-    <img src="assets/contact.jpg" alt="Contact Preview" />
+    <div class="main-grid">
+      <a href="/astrology.html" class="main-card">
+        <span class="emoji">🪐</span>
+        <h2>Astrology</h2>
+        <ul>
+          <li>KP Charts</li>
+          <li>NASA Data</li>
+          <li>Numerology</li>
+          <li>Palmistry</li>
+          <li>GeoVision</li>
+        </ul>
+      </a>
+      <a href="/library.html" class="main-card">
+        <span class="emoji">📚</span>
+        <h2>Digital Library</h2>
+        <div>Sacred texts & multilingual archives</div>
+      </a>
+      <a href="/dharma-sabha.html" class="main-card">
+        <span class="emoji">🏛️</span>
+        <h2>Dharma Sabha Mandapaya</h2>
+        <div>Live Zoom & Discussions</div>
+      </a>
+      <a href="/doctor-buddhi.html" class="main-card">
+        <span class="emoji">🧑‍⚕️</span>
+        <h2>Doctor Buddhi</h2>
+        <div>Physical & Mental Health</div>
+      </a>
+      <a href="/music-lab.html" class="main-card">
+        <span class="emoji">🎶</span>
+        <h2>Music Lab</h2>
+        <div>Spiritual music & Smule</div>
+      </a>
+      <a href="/news.html" class="main-card">
+        <span class="emoji">📰</span>
+        <h2>News Line</h2>
+        <div>Spiritual & Global news</div>
+      </a>
+      <a href="/anurudda-articles.html" class="main-card">
+        <span class="emoji">✍️</span>
+        <h2>Anurudda’s Articles</h2>
+        <div>Personal spiritual insights</div>
+      </a>
+      <a href="/ai-buddhi-mona.html" class="main-card">
+        <span class="emoji">🤖</span>
+        <h2>AI Buddhi & Mona</h2>
+        <div>Dual AI wisdom & coding</div>
+      </a>
+      <a href="/community-writers.html" class="main-card">
+        <span class="emoji">🧑‍🤝‍🧑</span>
+        <h2>Community Writers</h2>
+        <div>Articles from spiritual writers</div>
+      </a>
+    </div>
   </section>
 
   <footer>
-    © 2025 Sathyadarshana.com — All Rights Reserved<br />
-    “May all beings be free from suffering. May wisdom light the Earth.”
+    &copy; 2025 Sathyadarshana.  
+    <br>
+    Creative Concept by Anurudda | Executed by Buddhi AI.  
+    <br>
+    <strong>All Rights Reserved – High Copyright Protection Enabled</strong>
   </footer>
-
 </body>
 </html>
